# hdx-scraper-ifrc

./: README.md  hatch.toml  ifrc.py  pyproject.toml  requirements-test.txt  requirements.txt  run.py
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-script.yml  run-python-tests.yml
config/: hdx_appeals_dataset.yml  hdx_country_appeals_resource_view.yml  hdx_country_whowhatwhere_resource_view.yml  hdx_global_appeals_resource_view.yml  hdx_personnel_dataset.yml  hdx_whowhatwhere_dataset.yml  project_configuration.yml
saved_data/: appeals.csv
src/hdx/scraper/ifrc/: __main__.py  pipeline.py
src/hdx/scraper/ifrc/config/: hdx_country_appeals_resource_view.yaml  hdx_global_whowhatwhere_resource_view.yaml  project_configuration.yaml
tests/: test_ifrc.py
tests/fixtures/: 3w_data_arm.csv  3w_data_global.csv  appeals_data_bdi.csv  appeals_data_global.csv  appeals_data_mrt.csv  qc_appeals_data_bdi.csv  qc_appeals_data_global.csv
tests/fixtures/input/: appeals.csv  appeals_0.json  countries_0.json  countries_1.json  personnel_0.json  whowhatwhere.json
