#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-ifrc"
requires-python = ">=3.8"
dependencies = [
  "hdx-python-api>= 6.5.4",
  "hdx-python-country>= 3.9.8",
  "hdx-python-utilities>= 3.9.5",
]

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-ifrc"

[project.optional-dependencies]
test = ["cydifflib", "pytest", "pytest-check", "pytest-cov"]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.ifrc__main__:main"
